# VidCollector

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  RESTRUCTURE_SUMMARY.md  SCRAPING_README.md  UBUNTU_SETUP.md  example_usage.py  install.sh  main.py  pyproject.toml  requirements.txt  scraping_example.py
.github/workflows/: ci.yml
src/vidcollector/: __init__.py  __main__.py  cli.py  config.py  crawler.py  database.py  download_services.py  scraping_cli.py  scraping_crawler.py  subtitle_extractor.py  youtube_api.py  youtube_scraper.py
tests/: test_basic.py
